--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
+    "@shadcn/ui": "^0.0.4",
+    "@tabler/icons-react": "^3.31.0",
     "@types/three": "^0.174.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
     "three": "^0.174.0"
   },
   "devDependencies": {
